cambio en la foto

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </head>
 <body>
     <header>
-        <img src="/images/Logo Giralda Brass corto1.jpg">
+        <img src="/images/logo-giralda-brass-corto.jpg">
         <nav class="menu">
             <ul>
                 <li><a href="index.html">INICIO</a></li>
