foto con guiones

--- a/Contacto.html
+++ b/Contacto.html
@@ -6,7 +6,7 @@
     <meta name="description" content="Sitio oficial del quinteto de metales Giralda Brass">
     <meta name="keywords" content="Giralda, Brass, Giralda Brass, Quinteto de metales, Sevilla">
     <meta name="author" content="Nikotino">
-    <meta name="robots" content="index, follow">
+    <meta name="robots" content="index.html, follow">
     <title>Giralda Brass - Contacto</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -19,7 +19,7 @@
         <img src="/images/Giralda Brass corto.png" alt="Giralda Brass">
         <nav class="menu">
             <ul>
-                <li><a href="Index.html">INICIO</a></li>
+                <li><a href="index.html">INICIO</a></li>
                 <li><a href="Quinteto.html">TRAYECTORIA</a></li>
                 <li><a href="Integrantes.html">MIEMBROS</a></li>
                 <li><a href="Multimedia.html">GRABACIONES</a></li>
@@ -151,7 +151,7 @@
                 <h4>Menú de navegación</h4>
                 <nav class="footer-menu">
                     <ul>
-                        <li><a href="Index.html">Inicio</a></li>
+                        <li><a href="index.html">Inicio</a></li>
                         <li><a href="Quinteto.html">Trayectoria</a></li>
                         <li><a href="Integrantes.html">Miembros</a></li>
                         <li><a href="Multimedia.html">Grabaciones</a></li>
