cambios a las barras de las imagenes

--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
 </head>
 <body>
     <header>
-        <img src="/images/logo-giralda-brass-corto.jpg">
+        <img src="images/logo-giralda-brass-corto.jpg">
         <nav class="menu">
             <ul>
                 <li><a href="index.html">INICIO</a></li>
-                <li><a href="Quinteto.html">TRAYECTORIA</a></li>
-                <li><a href="Integrantes.html">MIEMBROS</a></li>
-                <li><a href="Multimedia.html">GRABACIONES</a></li>
-                <li><a href="Contacto.html">CONTACTO</a></li>
+                <li><a href="quinteto.html">TRAYECTORIA</a></li>
+                <li><a href="integrantes.html">MIEMBROS</a></li>
+                <li><a href="multimedia.html">GRABACIONES</a></li>
+                <li><a href="contacto.html">CONTACTO</a></li>
             </ul>
         </nav>
     </header>
@@ -38,7 +38,7 @@
                         Permítenos ser parte de tu historia, creando esa melodía que hará tu evento único y memorable. Contáctanos hoy mismo y déjanos transformar tu visión en una experiencia auditiva excepcional.</p>
                 </div>
                 <div class="imagen-presentacion" id="pistonestrompeta">
-                    <img src="/images/pistonestrompeta.jpg" alt="Trompeta">
+                    <img src="images/pistonestrompeta.jpg" alt="Trompeta">
                 </div>
         </section>
         <section>
@@ -63,7 +63,7 @@
                     </div>
             </section>
             <div class="imagen-partituras">
-                <img src="/images/partiturasramo1.jpg" alt="Partitura con ramo de bodas">
+                <img src="images/partiturasramo1.jpg" alt="Partitura con ramo de bodas">
             </div>
                     <div>
             <blockquote id="cita-main">
@@ -73,13 +73,13 @@
         </div>
         <section class="presentacion-section">
             <div class="imagen-presentacion" id="trompetapartitura">
-                <img src="/images/partituraTrompeta.jpg" alt="Trompeta">
+                <img src="images/partituraTrompeta.jpg" alt="Trompeta">
             </div>
             <div class="presentacion-div" id="presentacion-arreglos">
                 <h2>¿No encuentras la pieza que buscas y necesitas que hagamos un arreglo o adaptación para un tema específico?</h2>
                 <p>Al contratarnos para vuestro evento, ofrecemos un amplio catálogo de piezas musicales para que podáis elegir las que más se adapten a vuestras necesidades. Los temas de los que disponemos
                     van desde la música clásica hasta el jazz, pasando por la música española, pop, rock, bandas sonoras, etc. <br><br>
-                    Si aún con nuestro catálogo no cubrís con vuestras peticiones, disponemos de un servicio de arreglos de piezas a la carta que podéis solicitar en nuestra sección de <a href="Contacto.html">contacto</a>
+                    Si aún con nuestro catálogo no cubrís con vuestras peticiones, disponemos de un servicio de arreglos de piezas a la carta que podéis solicitar en nuestra sección de <a href="contacto.html">contacto</a>
                     y concretar con nosotros las condiciones. <br><br>
                     Disponemos de grandes arreglistas entre nuestros componentes que con total seguridad sabrán darle el punto especial que vuestro evento merece.
                 </p>
@@ -96,18 +96,18 @@
             <section class="footer-section footer-social">
                 <h4>Redes sociales</h4>
                 <p><img src="images/instagramlogo.png" alt="Logo de instragram" class="social-icon"><a href="https://www.instagram.com/giraldabrass/" target="_blank">Instragram</a></p>
-                <p><img src="/images/facebooklogo.png" alt="Logo de Facebook" class="social-icon"><a href="https://www.facebook.com/GiraldaBrass/" target="_blank">Facebook</a></p>
-                <p><img src="/images/youtubelogo.png" alt="Logo de YouTube" class="social-icon"><a href="https://www.youtube.com/@giraldabrass9818" target="_blank">YouTube</a></p>
+                <p><img src="images/facebooklogo.png" alt="Logo de Facebook" class="social-icon"><a href="https://www.facebook.com/GiraldaBrass/" target="_blank">Facebook</a></p>
+                <p><img src="images/youtubelogo.png" alt="Logo de YouTube" class="social-icon"><a href="https://www.youtube.com/@giraldabrass9818" target="_blank">YouTube</a></p>
             </section>
             <section class="footer-section footer-nav">
                 <h4>Menú de navegación</h4>
                 <nav class="footer-menu">
                     <ul>
                         <li><a href="index.html">Inicio</a></li>
-                        <li><a href="Quinteto.html">Trayectoria</a></li>
-                        <li><a href="Integrantes.html">Miembros</a></li>
-                        <li><a href="Multimedia.html">Grabaciones</a></li>
-                        <li><a href="Contacto.html">Contacto</a></li>
+                        <li><a href="quinteto.html">Trayectoria</a></li>
+                        <li><a href="integrantes.html">Miembros</a></li>
+                        <li><a href="multimedia.html">Grabaciones</a></li>
+                        <li><a href="contacto.html">Contacto</a></li>
                     </ul>
                 </nav>
             </section>
