--- a/Contacto.html
+++ b/Contacto.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, inicial-scale=1.0">
     <meta name="description" content="Sitio oficial del quinteto de metales Giralda Brass">
-    <meta name="keywords" content="Giralda, Brass, Giralda Brass, Quinteto de metales, Sevilla">
+    <meta name="keywords" content="Giralda, Brass, Giralda Brass, quinteto de metales, Sevilla">
     <meta name="author" content="Nikotino">
     <meta name="robots" content="index.html, follow">
     <title>Giralda Brass - Contacto</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Cardo:ital,wght@0,400;0,700;1,400&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="Estilo.css">
+    <link rel="stylesheet" href="estilo.css">
 
 </head>
 <body>
@@ -20,10 +20,10 @@
         <nav class="menu">
             <ul>
                 <li><a href="index.html">INICIO</a></li>
-                <li><a href="Quinteto.html">TRAYECTORIA</a></li>
-                <li><a href="Integrantes.html">MIEMBROS</a></li>
-                <li><a href="Multimedia.html">GRABACIONES</a></li>
-                <li><a href="Contacto.html">CONTACTO</a></li>
+                <li><a href="quinteto">TRAYECTORIA</a></li>
+                <li><a href="integrantes.html">MIEMBROS</a></li>
+                <li><a href="multimedia.html">GRABACIONES</a></li>
+                <li><a href="contacto.html">CONTACTO</a></li>
             </ul>
         </nav>
     </header>
@@ -104,7 +104,7 @@
                     <div class="faq-answer">
                         <p>En el caso de los conciertos la duración suele ser de una hora aproximadamente.
                             <br>Normalmente consisten en unos 40/45 minutos de música y el resto del tiempo uno de nuestros
-                            integrantes ofrece una presentación de cada una de las obras, preparando a nuestro público 
+                            integrantes.htmlntegrantes ofrece una presentación de cada una de las obras, preparando a nuestro público 
                             para poder disfrutar de las obras con el apoyo de su contexto específico.<br>
                             En los eventos privados nos adaptamos a las características propias de cada situación, ya que cada 
                             actuación tiene unas características distintas. Contactad con nosotros para una información más detallada.
@@ -152,10 +152,10 @@
                 <nav class="footer-menu">
                     <ul>
                         <li><a href="index.html">Inicio</a></li>
-                        <li><a href="Quinteto.html">Trayectoria</a></li>
-                        <li><a href="Integrantes.html">Miembros</a></li>
-                        <li><a href="Multimedia.html">Grabaciones</a></li>
-                        <li><a href="Contacto.html">Contacto</a></li>
+                        <li><a href="quinteto.html">Trayectoria</a></li>
+                        <li><a href="integrantes.html">Miembros</a></li>
+                        <li><a href="multimedia.html">Grabaciones</a></li>
+                        <li><a href="contacto.html">Contacto</a></li>
                     </ul>
                 </nav>
             </section>
