poniendo anonimo correo y telefono

--- a/contacto.html
+++ b/contacto.html
@@ -39,8 +39,8 @@
 
                 <p>Puede contactarnos a través de estos medios:</p>
                 <ul>
-                    <li>Teléfono: +34 633 22 79 63<br> Puede contactar vía Whatsapp o llamar indistintamente.</li>
-                    <li>E-mail: giraldabrass@gmail.com</li>
+                    <li>Teléfono: +34 666 66 66 66<br> Puede contactar vía Whatsapp o llamar indistintamente.</li>
+                    <li>E-mail: correofalso@gmail.com</li>
                 </ul>
                 <p>Si lo desea, también puede contactarnos a través de nuestras redes sociales:</p>
                     <ul>
@@ -138,8 +138,8 @@
         <div class="footer-content">
             <section class="footer-section footer-contact">
                 <h4>Contacto</h4>
-                <p>E-mail: <a href="mailto:giraldabrass@gmail.com">giraldabrass@gmail.com</a></p>
-                <p>Teléfono: <a href="tel:+34633227963">+34 633 22 79 63</a></p>
+                <p>E-mail: <a href="mailto:correofalso@gmail.com">correofalso@gmail.com</a></p>
+                <p>Teléfono: <a href="tel:+34666666666">+34 666666666</a></p>
             </section>
             <section class="footer-section footer-social">
                 <h4>Redes sociales</h4>
