fotos de footer

--- a/contacto.html
+++ b/contacto.html
@@ -16,7 +16,7 @@
 </head>
 <body>
     <header id="header-general">
-        <img src="/images/Giralda Brass corto.png" alt="Giralda Brass">
+        <img src="images/Giralda Brass corto.png" alt="Giralda Brass">
         <nav class="menu">
             <ul>
                 <li><a href="index.html">INICIO</a></li>
@@ -45,7 +45,7 @@
                 <p>Si lo desea, también puede contactarnos a través de nuestras redes sociales:</p>
                     <ul>
                         <li><img src="images/instagramlogo.png" alt="Logo de instragram" class="social-icon" target="_blank"><a href="https://www.instagram.com/giraldabrass/">Instragram</a></li>
-                        <li><img src="/images/facebooklogo.png" alt="Logo de Facebook" class="social-icon" target="_blank"><a href="https://www.facebook.com/GiraldaBrass/">Facebook</a></li>
+                        <li><img src="images/facebooklogo.png" alt="Logo de Facebook" class="social-icon" target="_blank"><a href="https://www.facebook.com/GiraldaBrass/">Facebook</a></li>
                     </ul>
             </div>
             <section id="info-general">
@@ -144,8 +144,8 @@
             <section class="footer-section footer-social">
                 <h4>Redes sociales</h4>
                 <p><img src="images/instagramlogo.png" alt="Logo de instragram" class="social-icon"><a href="https://www.instagram.com/giraldabrass/" target="_blank">Instragram</a></p>
-                <p><img src="/images/facebooklogo.png" alt="Logo de Facebook" class="social-icon"><a href="https://www.facebook.com/GiraldaBrass/" target="_blank">Facebook</a></p>
-                <p><img src="/images/youtubelogo.png" alt="Logo de YouTube" class="social-icon"><a href="https://www.youtube.com/@giraldabrass9818" target="_blank">YouTube</a></p>
+                <p><img src="images/facebooklogo.png" alt="Logo de Facebook" class="social-icon"><a href="https://www.facebook.com/GiraldaBrass/" target="_blank">Facebook</a></p>
+                <p><img src="images/youtubelogo.png" alt="Logo de YouTube" class="social-icon"><a href="https://www.youtube.com/@giraldabrass9818" target="_blank">YouTube</a></p>
             </section>
             <section class="footer-section footer-nav">
                 <h4>Menú de navegación</h4>
