responsive, he cambiado algunas clases con gemini

--- a/index.html
+++ b/index.html
@@ -15,20 +15,23 @@
     <link rel="stylesheet" href="estilo.css">
 
 </head>
-<body>
+<body class="pagina-index">
     <header>
-        <img src="images/logo-giralda-brass-corto.jpg">
-        <nav class="menu">
-            <ul>
-                <li><a href="index.html">INICIO</a></li>
-                <li><a href="quinteto.html">TRAYECTORIA</a></li>
-                <li><a href="integrantes.html">MIEMBROS</a></li>
-                <li><a href="multimedia.html">GRABACIONES</a></li>
-                <li><a href="contacto.html">CONTACTO</a></li>
-            </ul>
-        </nav>
+        <img src="images/logo-giralda-brass-corto.jpg" alt="Logo grande Giralda Brass" class="img-header-index-grande">
+        <div id="header-general">
+            <img src="images/Giralda Brass corto.png" alt="Logo Giralda Brass">
+            <nav class="menu">
+                <ul>
+                    <li><a href="index.html">INICIO</a></li>
+                    <li><a href="quinteto.html">QUINTETO</a></li>
+                    <li><a href="integrantes.html">MIEMBROS</a></li>
+                    <li><a href="multimedia.html">MULTIMEDIA</a></li>
+                    <li><a href="contacto.html">CONTACTO</a></li>
+                </ul>
+            </nav>
+        </div>
     </header>
-    <main class="main-index.html">
+    <main class="main-index">
                     <h1>Bienvenidos a la página oficial de Giralda Brass</h1>
         <section class="presentacion-section">
                 <div class="presentacion-div">
@@ -61,11 +64,11 @@
                             <span>Henry Wadsworth Longfellow</span>
                         </blockquote>
                     </div>
-            </section>
-            <div class="imagen-partituras">
-                <img src="images/partiturasramo1.jpg" alt="Partitura con ramo de bodas">
-            </div>
-                    <div>
+        </section>
+        <div class="imagen-partituras">
+            <img src="images/partiturasramo1.jpg" alt="Partitura con ramo de bodas">
+         </div>
+        <div>
             <blockquote id="cita-main">
                 <p>"Cuando las palabras fallan, la música habla."</p>
                 <span>Henry Wadsworth Longfellow</span>    
@@ -117,9 +120,6 @@
         </div>
     </footer>
 </body>
-
-
-
 
 
 </html>
