--- a/contacto.html
+++ b/contacto.html
@@ -17,10 +17,11 @@
 <body>
     <header id="header-general">
         <img src="images/Giralda Brass corto.png" alt="Giralda Brass">
+        <div class="espaciador-header"></div>
         <nav class="menu">
             <ul>
                 <li><a href="index.html">INICIO</a></li>
-                <li><a href="quinteto">TRAYECTORIA</a></li>
+                <li><a href="quinteto.html">TRAYECTORIA</a></li>
                 <li><a href="integrantes.html">MIEMBROS</a></li>
                 <li><a href="multimedia.html">GRABACIONES</a></li>
                 <li><a href="contacto.html">CONTACTO</a></li>
