He actualizado los curriculums con fotos de Juan Antonio, Nacho y Valero, poniendo fotos y poniendo strongs. He creado la clase negrita-sin-color

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="keywords" content="Giralda, Brass, Giralda Brass, Quinteto de metales, Sevilla">
     <meta name="author" content="Nikotino">
     <meta name="robots" content="index.html, follow">
-    <title>Giralda Brass - Contacto</title>
+    <title>Giralda Brass</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Cardo:ital,wght@0,400;0,700;1,400&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
