--- a/integrantes.html
+++ b/integrantes.html
@@ -7,7 +7,7 @@
     <meta name="keywords" content="Giralda, Brass, Giralda Brass, quinteto de metales, Sevilla">
     <meta name="author" content="Nikotino">
     <meta name="robots" content="index.html, follow">
-    <title>Giralda Brass - Contacto</title>
+    <title>Giralda Brass - Miembros</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Cardo:ital,wght@0,400;0,700;1,400&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
@@ -35,12 +35,19 @@
         <section class="section-member-info">
             <div class="presentacion-section div-member-info" id="trumpet1">
                 <div class="imagenes-miembros">
-                    <img src="images/nacho.jpg" alt="Foto de Ignacio">
+                    <img src="images/foto-nacho.jpg" alt="Foto de Ignacio">
                 </div>
                 <div class="biografia">
                     <h2>Ignacio Gallardo Leal</h2>
                     <h3>Trompeta</h3>
-                    <p>
+                    <p>Un gran talento en el panorama musical sevillano, Ignacio Gallardo Leal es un gran <strong>trompetista</strong> con una sólida formación forjada en la prestigiosa <strong class="negrita-sin-color">Fundación Barenboim-Said</strong>. Su compromiso con la excelencia 
+                        lo llevó a obtener una beca de dicha Fundación para cursar el <strong> "V Máster en Interpretación Orquestal”</strong>, un programa de élite organizado en colaboración con la UNÍA, consolidando así sus habilidades al más alto nivel.<br><br>
+
+                        En el ámbito sinfónico, ha demostrado una notable versatilidad y profesionalidad, habiendo colaborado con formaciones de gran prestigio como la <strong>Orquesta Bética de Cámara</strong>, la <strong>Banda Sinfónica Municipal de Sevilla</strong>, la 
+                        <strong>Real Orquesta Sinfónica de Sevilla (ROSS)</strong> y la <strong>Orquesta Nacional de España (ONE)</strong>. Estas experiencias subrayan su capacidad para integrarse en entornos orquestales exigentes y su contribución a producciones de alto calibre.<br><br>
+
+                        Actualmente, Ignacio comparte su pasión y conocimiento como <strong class="negrita-sin-color">profesor de trompeta</strong> en el <strong>Conservatorio Profesional de Música de Osuna</strong>, formando a las nuevas generaciones de músicos. Además, mantiene una colaboración asidua 
+                        con la Real Orquesta Sinfónica de Sevilla (ROSS), lo que reafirma su relevancia y presencia activa en el circuito orquestal de primer nivel.
                     </p>
                 </div>
             </div>
@@ -49,10 +56,18 @@
                         <h2>José Valero Hermoso</h2>
                         <h3>Trompeta</h3>
                         
-                        <p></p>
+                        <p> José es un pilar fundamental y <strong>miembro fundador de Giralda Brass</strong>, su talento se extiende más allá de la interpretación. Es un <strong>trompetista virtuoso y arreglista excepcional</strong>, 
+                            cuya visión ha enriquecido el repertorio de la formación. Ha colaborado con <strong class="negrita-sin-color">orquestas</strong> de renombre como la <strong>Real Orquesta Sinfónica de Sevilla (ROSS)</strong>, la <strong>Orquesta Nacional de España</strong>, la 
+                            <strong>Orquesta Bética de Cámara de Sevilla</strong>, la Banda Sinfónica Municipal de Sevilla, la Orquesta del Musical "El Médico", la Orquesta Lírica "Ópera Sur" y la Orquesta Sinfónica de la Universidad de Sevilla. <br> <br>
+
+                            Actualmente, demuestra su compromiso con la <strong class="negrita-sin-color">educación musical</strong> como profesor en la escuela municipal de Mairena del Alcor y en la escuela municipal de Tomares, inspirando a futuras generaciones de músicos. <br> <br>
+
+                            Como parte integral de Giralda Brass, ha cosechado importantes reconocimientos, incluyendo el <strong>I Premio Internacional de quintetos de viento metal "Burke y Bagley" (Seattle)</strong> y el <strong>III premio nacional de quintetos
+                             de viento metal "Valeriano Machí Esparza" (Valencia)</strong>. Su destreza ha sido consistentemente reconocida, siendo finalista en destacados concursos de música de cámara como "The Yago School Foundation" y Abate Marchena, 
+                             consolidando su estatus en el panorama musical.</p>
                 </div>
                 <div class="imagenes-miembros">
-                    <img src="images/valero.jpg" alt="Foto de Juan Antonio">
+                    <img src="images/foto-valero.jpg" alt="Foto de José">
                 </div>
             </div>
             <div class="presentacion-section div-member-info" id="horn">
@@ -73,19 +88,19 @@
                     <h2>Juan Antonio Moreno García</h2>
                     <h3>Trombón</h3>
                     
-                    <p>Considerado "un virtuoso del trombón", Juan Antonio Moreno es un trombonista y arreglista clave en Giralda Brass. Ha estado participando desde su fundación con el quinteto y es miembro desde el 2021.
-                        Ha ofrecido cientos de conciertos en España, Portugal y Alemania, participando en escenarios de todo tipo con orquestas, grupos de cámara y bandas. <br><br>
+                    <p>Considerado "un virtuoso del <strong>trombón</strong>", Juan Antonio es un <strong class="negrita-sin-color">trombonista</strong> y <strong>arreglista</strong> clave en <strong>Giralda Brass</strong>. Ha estado participando desde su fundación con el quinteto y es miembro desde el 2021.
+                        Ha ofrecido cientos de conciertos en España, Portugal y Alemania, participando en escenarios de todo tipo con <strong class="negrita-sin-color">orquestas</strong>, <strong class="negrita-sin-color">grupos de cámara</strong> y <strong class="negrita-sin-color">bandas</strong>. <br><br>
 
-                        Actualmente es profesor de trombón y tuba en la Escuela Manuel Navarrete León y profesor de música de secundaria, Juan Antonio ha desarrollado una notable carrera como instrumentista internacional y pedagogo.
-                        Previo a su integración en Giralda Brass, fue miembro en Proemium Metalls, donde llegó a la final del prestigioso concurso "Jan Koetsier Competition" y consiguió un segundo premio en el "Burke & Bugley Competition". 
-                        Ha participado en agrupaciones de prestigio como son la Orquesta Ciudad de Granada (OCG), la Orquesta Bética de Cámara, la Orquesta Sinfónica del Estrecho (OSE) y la banda militar Soria 9, entre otras.<br><br>
+                        Actualmente es <strong class="negrita-sin-color">profesor de trombón y tuba</strong> en la Escuela Manuel Navarrete León y <strong class="negrita-sin-color">profesor de música de secundaria</strong>, Juan Antonio ha desarrollado una notable carrera como instrumentista internacional y pedagogo.
+                        Previo a su integración en Giralda Brass, fue miembro en <strong>Proemium Metalls</strong>, donde llegó a la final del prestigioso concurso "Jan Koetsier Competition" y consiguió un segundo premio en el "Burke & Bugley Competition". 
+                        Ha participado en agrupaciones de prestigio como son la <strong>Orquesta Ciudad de Granada (OCG)</strong>, la <strong>Orquesta Bética de Cámara</strong>, la <strong>Orquesta Sinfónica del Estrecho (OSE)</strong> y la <strong class="negrita-sin-color">banda militar Soria 9</strong>, entre otras.<br><br>
 
-                        Juan Antonio es además un apasionado de las tecnologías, lo que ha aprovechado para unir su pasión con la música y crear un canal de <a href="https://www.youtube.com/watch?v=YDurKuaVOJ8&ab_channel=TheTrombonist" target="_blank">YouTube</a> donde expone sus habilidad
+                        Juan Antonio es además un apasionado de las tecnologías, lo que ha aprovechado para unir su pasión con la música y crear un <strong>canal de <a href="https://www.youtube.com/watch?v=YDurKuaVOJ8&ab_channel=TheTrombonist" target="_blank">YouTube</a></strong> donde expone sus habilidad
                         como arreglista y como trombonista</p>
 
                 </div>
                 <div class="imagenes-miembros">
-                <img src="images/foto-juan-antonio-cuadrado.jpg" alt="Foto de Juan Antonio">
+                <img src="images/foto-juan-antonio-cuadrado.jpg" alt="Foto de Marco">
                 </div>
             </div>
             <div class="presentacion-section div-member-info" id="tuba">
