termine los integrantes a afalta de foto de marco, cambie el nombre de la cvita que estaba mal en index, he arreglado el css y he empezado el quinteto.html

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         <div>
             <blockquote id="cita-main">
                 <p>"Cuando las palabras fallan, la música habla."</p>
-                <span>Henry Wadsworth Longfellow</span>    
+                <span>H. C. Andersen</span>    
             </blockquote>        
         </div>
         <section class="presentacion-section">
