--- a/integrantes.html
+++ b/integrantes.html
@@ -41,7 +41,7 @@
                     <h2>Ignacio Gallardo Leal</h2>
                     <h3>Trompeta</h3>
                     <p>Un gran talento en el panorama musical sevillano, Ignacio Gallardo Leal es un gran <strong>trompetista</strong> con una sólida formación forjada en la prestigiosa <strong class="negrita-sin-color">Fundación Barenboim-Said</strong>. Su compromiso con la excelencia 
-                        lo llevó a obtener una beca de dicha Fundación para cursar el <strong> "V Máster en Interpretación Orquestal”</strong>, un programa de élite organizado en colaboración con la UNÍA, consolidando así sus habilidades al más alto nivel.<br><br>
+                        lo llevó a obtener una beca de dicha Fundación para cursar el <strong> "V Máster en Interpretación Orquestal”</strong>, un programa de élite organizado en colaboración con la UNÍA, consolidando así sus habilidades al más alto nivel. Es miembro de Giralda Brass desde 2022<br><br>
 
                         En el ámbito sinfónico, ha demostrado una notable versatilidad y profesionalidad, habiendo colaborado con formaciones de gran prestigio como la <strong>Orquesta Bética de Cámara</strong>, la <strong>Banda Sinfónica Municipal de Sevilla</strong>, la 
                         <strong>Real Orquesta Sinfónica de Sevilla (ROSS)</strong> y la <strong>Orquesta Nacional de España (ONE)</strong>. Estas experiencias subrayan su capacidad para integrarse en entornos orquestales exigentes y su contribución a producciones de alto calibre.<br><br>
@@ -72,14 +72,23 @@
             </div>
             <div class="presentacion-section div-member-info" id="horn">
                 <div class="imagenes-miembros">
-                    <img src="images/manutoni.jpg" alt="Foto de Juan Antonio">
+                    <img src="images/manutoni.jpeg" alt="Foto de Juan Antonio">
                 </div>
                 <div class="biografia">
                     <h2>Manuel Antonio Hernández Acosta</h2>
                     <h3>Trompa</h3>
-                    <p>También conocido como Manuel "El tontito", es especialista en tocar el armónico de debajo en Morricone y en hacer videollamadas con la novia. Además, le gusta comer ramen superpicante para luego cagar blando. <br> <br>
-                            Actualmente es profesor de cocina-mecánica, donde enseña a dar mango a sus alumnos y a montarse en su motora. Ha dado clases magistrales en barrios como Los pajaritos, La plata, Las 3000 viviendas, etc. <br> <br>
-                            Su pasatiempo actual es ir a por princesas convertidas en ogro para heredar su reino y torturar a la galleta de jengibre.
+                    <p>Manuel es un gran <strong>trompista</strong> que domina su instrumento y se compromete en cada proyecto. Su sólida formación incluye su paso por la <strong>Academia de Estudios Orquestales de la Fundación Barenboim-Said</strong>, donde perfeccionó 
+                        su técnica en un entorno de alto nivel junto a músicos de referencia. Además, su faceta como <strong>arreglista</strong> le permite aportar una visión creativa y flexible, adaptando repertorio para distintos niveles y formatos instrumentales.
+                        Esta trayectoria le llevó a formar parte de Giralda Brass desde el año 2023<br><br>
+
+                        En el ámbito de la <strong>interpretación</strong>, ha demostrado una notable <strong class="negrita-sin-color">versatilidad y profesionalidad</strong>. Ha formado parte de destacadas agrupaciones sinfónicas como la 
+                        <strong class="negrita-sin-color">Orquesta Álvarez-Beigbeder de Jerez</strong>, la <strong class="negrita-sin-color">Orquesta Sinfónica de Triana</strong>, la <strong class="negrita-sin-color">Orquesta de la Asociación 
+                        Coral de Sevilla</strong> y la <strong class="negrita-sin-color">Compañía Sevillana de Zarzuela</strong>. Apasionado de la <strong>música de cámara</strong>, es miembro de <strong>Air Brass</strong> y ha colaborado con otras 
+                        formaciones como <strong class="negrita-sin-color">Euridice Wind Quintet</strong>.<br><br>
+
+                        En el terreno <strong>educativo</strong>, Manuel imparte clases de <strong>trompa</strong>, <strong class="negrita-sin-color">lenguaje musical</strong> e <strong class="negrita-sin-color">iniciación</strong> en 
+                        <strong>Música Viva y Creativa</strong> y en la <strong>Escuela Municipal de Música de Tomares</strong>. Además, cuenta con el <strong>Máster en Formación del Profesorado en Secundaria</strong> y compagina su labor en escuelas 
+                        con la enseñanza en institutos.
                     </p>
                 </div>
             </div>
@@ -105,8 +114,23 @@
             </div>
             <div class="presentacion-section div-member-info" id="tuba">
                 <img>
-                <h2>Marco Antonio Trigueros Begines</h2>
+                <div class="biografia">
+                    <h2>Marco Antonio Trigueros Begines</h2>
+                    <p>
+                        Marco Antonio mostró un talento prometedor  con la <strong>tuba</strong> al ser <strong class="negrita-sin-color">becario recurrente</strong> de la <strong>Banda Sinfónica de Sevilla</strong> con tan sólo 15 años, una distinción que se mantuvo con llamadas periódicas para sus 
+                        conciertos. Su compromiso con la música orquestal se afianzó en el verano de 2009, cuando fue <strong>tuba solista de la Orquesta Joven del Aljarafe</strong> durante toda la temporada. Su trayectoria como intérprete lo ha llevado a ser 
+                        una <strong>figura clave en Giralda Brass</strong>, siendo miembro desde el año 2016.<br><br>
 
+                        Su colaboración con la <strong>Banda Sinfónica de Sevilla</strong> ha sido constante, participando en diversos conciertos destacados, incluyendo homenajes y colaboraciones bajo la dirección de importantes maestros. Desde 2017, su presencia
+                        se ha expandido al participar activamente con la <strong>Orquesta del Aljarafe</strong>, la <strong>Orquesta Sinfónica de Triana</strong> y la <strong>Orquesta 
+                        Sinfónica del Estrecho (OSE)</strong> en todos sus conciertos. Complementa su agenda con giras de <strong class="negrita-sin-color">conciertos didácticos con su quinteto</strong>, además de seguir formándose continuamente en 
+                        <strong class="negrita-sin-color">cursos nacionales e internacionales</strong>.<br><br>
+
+                        Actualmente, Marco es <strong class="negrita-sin-color">licenciado en el CSM “Manuel Castillo” de Sevilla</strong>. Su rol como <strong class="negrita-sin-color">tuba principal de la Orquesta Sinfónica de Triana</strong> y, sobre todo, su 
+                        dedicación al <strong>Quinteto de metales "Giralda Brass"</strong> consolidan su posición como intérprete. En el ámbito docente, es <strong>profesor en la escuela de música de Punta Umbría</strong>, <strong>Profesor del Conservatorio 
+                        Profesional de Osuna</strong> e interino de conservatorios de la <strong class="negrita-sin-color">Junta de Andalucía</strong>, compartiendo su experiencia con futuras generaciones.</p>
+                    </p>
+                </div>    
             </div>
         </section>
     </main>
