--- a/integrantes.html
+++ b/integrantes.html
@@ -2,7 +2,7 @@
 <html>
     <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, inicial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Sitio oficial del quinteto de metales Giralda Brass">
     <meta name="keywords" content="Giralda, Brass, Giralda Brass, quinteto de metales, Sevilla">
     <meta name="author" content="Nikotino">
